--- a/libft/Makefile
+++ b/libft/Makefile
@@ -23,7 +23,8 @@ SOURCES = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr
     ft_striteri.c ft_strmap.c ft_strmapi.c ft_strequ.c ft_strnequ.c ft_strsub.c ft_strjoin.c ft_strtrim.c\
      ft_strsplit.c ft_itoa.c ft_putchar.c ft_putstr.c ft_putendl.c ft_putnbr.c \
    ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_islower.c ft_isupper.c\
-   ft_strjoin_free.c
+   ft_strjoin_free.c ft_strjoin_free2.c
+
 OBJECTS = $(SOURCES:.c=.o)
 
 INCLUDES = ./
